include/dss_capi.h

    /*
    Open or Close the switch. No effect if switch is locked.  However, Reset removes any lock and then closes the switch (shelf state).
    */
    DSS_CAPI_DLL int32_t SwtControls_Get_Action(void);
    /*
    Array of strings with all SwtControl names in the active circuit.
    */
    DSS_CAPI_DLL void SwtControls_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Time delay [s] betwen arming and opening or closing the switch.  Control may reset before actually operating the switch.
    */
    DSS_CAPI_DLL double SwtControls_Get_Delay(void);
    /*
    Sets the first SwtControl active. Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t SwtControls_Get_First(void);
    /*
    The lock prevents both manual and automatic switch operation.
    */
    DSS_CAPI_DLL uint16_t SwtControls_Get_IsLocked(void);
    /*
    Sets a SwtControl active by Name.
    */
    DSS_CAPI_DLL char* SwtControls_Get_Name(void);
    /*
    Sets the next SwtControl active. Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t SwtControls_Get_Next(void);
    /*
    Full name of the switched element.
    */
    DSS_CAPI_DLL char* SwtControls_Get_SwitchedObj(void);
    /*
    Terminal number where the switch is located on the SwitchedObj
    */
    DSS_CAPI_DLL int32_t SwtControls_Get_SwitchedTerm(void);
    /*
    Open or Close the switch. No effect if switch is locked.  However, Reset removes any lock and then closes the switch (shelf state).
    */
    DSS_CAPI_DLL void SwtControls_Set_Action(int32_t Value);
    /*
    Time delay [s] betwen arming and opening or closing the switch.  Control may reset before actually operating the switch.
    */
    DSS_CAPI_DLL void SwtControls_Set_Delay(double Value);
    /*
    The lock prevents both manual and automatic switch operation.
    */
    DSS_CAPI_DLL void SwtControls_Set_IsLocked(uint16_t Value);
    /*
    Sets a SwtControl active by Name.
    */
    DSS_CAPI_DLL void SwtControls_Set_Name(char* Value);
    /*
    Full name of the switched element.
    */
    DSS_CAPI_DLL void SwtControls_Set_SwitchedObj(char* Value);
    /*
    Terminal number where the switch is located on the SwitchedObj
    */
    DSS_CAPI_DLL void SwtControls_Set_SwitchedTerm(int32_t Value);
    DSS_CAPI_DLL int32_t SwtControls_Get_Count(void);
    /*
    Normal state of switch (see ActionCodes) ActionOpen or ActionClose
    */
    DSS_CAPI_DLL int32_t SwtControls_Get_NormalState(void);
    DSS_CAPI_DLL void SwtControls_Set_NormalState(int32_t Value);
    /*
    Force switch to specified state
    */
    DSS_CAPI_DLL int32_t SwtControls_Get_State(void);
    /*
    Get Present state of switch
    */
    DSS_CAPI_DLL void SwtControls_Set_State(int32_t Value);
    DSS_CAPI_DLL void SwtControls_Reset(void);
    DSS_CAPI_DLL int32_t SwtControls_Get_idx(void);
    DSS_CAPI_DLL void SwtControls_Set_idx(int32_t Value);